--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Google AI Studio
 GOOGLE_API_KEY=<your-api-key>
 GOOGLE_GENAI_USE_VERTEXAI=FALSE
+JIRA_TOKEN=<your-api-key>
 # GITHUB_PERSONAL_ACCESS_TOKEN=<your-personal-access-token>
 # Vertex AI (uncomment to use)
 #GOOGLE_GENAI_USE_VERTEXAI=TRUE
